# BEV-Visualizer

./: CMakeLists.txt  README.md
Unity-Visualizer/BEV-Visualizer/: Assembly-CSharp.csproj  BEV-Visualizer.sln
Unity-Visualizer/BEV-Visualizer/Assets/Visualizer/Materials/: Bus.mat  Car.mat  Cone.mat  Ground.mat  Pedestrian.mat  Truck.mat  selfCar.mat
Unity-Visualizer/BEV-Visualizer/Assets/Visualizer/Prefabs/: Bus.prefab  Car.prefab  Cone.prefab  Empty.prefab  Pedestrian.prefab  Truck.prefab  selfCar.prefab
Unity-Visualizer/BEV-Visualizer/Assets/Visualizer/Scenes/: VIsualizer.unity
Unity-Visualizer/BEV-Visualizer/Assets/Visualizer/Scripts/: Initialize.cs
Unity-Visualizer/BEV-Visualizer/Assets/Visualizer/Scripts/Networking/: UDPClient.cs
Unity-Visualizer/BEV-Visualizer/Assets/Visualizer/Scripts/Types/: Detection.cs
Unity-Visualizer/BEV-Visualizer/ProjectSettings/: ProjectSettings.asset  TagManager.asset
Unity-Visualizer/BEV-Visualizer/UserSettings/Layouts/: default-2022.dwlt
src/: main.cpp
src/common/: Types.hpp
src/fastbev/: fastbev.cpp  postprecess.hpp
src/server/: udp.cpp  udp.hpp
tool/: build_trt_engine.sh  environment.sh  run.sh
